<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ime.mosis.elfak.myplaces.MainActivity">
    <item
        android:id="@+id/show_map_item"
        android:orderInCategory="100"
        android:title="@string/show_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_map_white_24"/>
    <item
        android:id="@+id/my_places_list_item"
        android:orderInCategory="102"
        android:title="@string/my_places_list"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_list_white_24"/>
    <item
        android:id="@+id/about_item"
        android:orderInCategory="103"
        android:title="@string/about"
        app:showAsAction="never"
        android:icon="@drawable/outline_info_white_24"/>
</menu>