<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditMyPlaceActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyPLaces.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MyPLaces.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_name_label" />

    <EditText
        android:id="@+id/editmyplace_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_desc_label" />

    <EditText
        android:id="@+id/editmyplace_desc_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editmyplace_lat_label" />
            <EditText
                android:id="@+id/editmyplace_lat_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editmyplace_lon_label" />
            <EditText
                android:id="@+id/editmyplace_lon_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/editmyplace_location_button"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/editmyplace_location_label" />

            <include
                layout="@layout/content_edit_my_place"
                android:layout_height="72dp" />
        </LinearLayout>

    </TableRow>


    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/editmyplace_finished_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:id="@+id/editmyplace_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/editmyplace_cancel_label" />

    </TableRow>





</LinearLayout>